# neuralearn-ms

./: .gitignore  Dockerfile  LICENSE  README.md  database.py  entrypoint.sh  logging_config.py  main.py  pyproject.toml  requirements.txt  s3_client.py  sample.env
.kiro/steering/: product.md  structure.md  tech.md
jobs/: eda_worker.py
middleware/: __init__.py  auth.py  rate_limit.py
scripts/: README.md  autoscaler.py  check_job_status.py  load_test.py  monitor_redis.py  start_all.sh  worker_manager.py
services/: cleaner.py  data_loader.py  eda.py  feature_engineering.py  gemini_client.py  outliers.py  queue.py  schema.py
