[project]
name = "neuralearn-ms"
version = "0.1.0"
description = "tuturu"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles==23.2.1",
    "aiohttp==3.9.1",
    "asyncpg==0.30.0",
    "boto3==1.35.49",
    "fastapi==0.104.1",
    "google-generativeai==0.3.2",
    "httpx==0.25.2",
    "matplotlib==3.8.2",
    "numpy==1.26.2",
    "pandas==2.1.3",
    "pydantic==2.5.2",
    "pyjwt>=2.11.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "redis==5.0.8",
    "rq==1.16.2",
    "scikit-learn==1.3.2",
    "seaborn==0.13.0",
    "sqlalchemy[asyncio]==2.0.36",
    "structlog>=25.5.0",
    "uvicorn[standard]==0.24.0",
]
